Init 14: - Them responsive cho header

--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,31 @@
   </head>
   <body>
     <div class="content">
-      <header>
+      <div class="block-mb mb-header">
+        <a href="index.html">
+         <div class="block-mb mb-header-logo">
+          <img src="img/logo.jpg">
+         </div>
+        </a>
+        <div class="block-mb mb-header-search">
+          <div class="block-mb mb-header-icon">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </div>
+          <div class="block-mb mb-header-title">
+            TÌM KIẾM
+          </div>
+        </div>
+      </div>
+      <header class="none-mb">
         <div class="main-header">
           <div class="menu-area">
             <div class="header-menu">
-              <div class="menu-link">
+              <a href="" class="block-mb">
+                <div class="mb-logo">
+                  <img src="img/logo.jpg">
+                </div>
+              </a>
+              <div class="menu-link none-mb">
                 <a href="">
                   <div class="menu-item">GAME MOBILE</div>
                 </a>
@@ -47,7 +67,7 @@
                   <div class="menu-item">CỘNG ĐỒNG</div>
                 </a>
               </div>
-              <div class="menu-search-bar">
+              <div class="menu-search-bar none-mb">
                 <input
                   class="search-bar"
                   type="text"
@@ -59,7 +79,15 @@
                   </div>
                 </a>
               </div>
-              <div class="header-social">
+              <div class="mb-search-bar block-mb">
+                <div class="mb-search-icon">
+                  <i class="fa-solid icon-search fa-magnifying-glass"></i>
+                </div>
+                <div class="mb-search-name">
+                  TÌM KIẾM
+                </div>
+              </div>
+              <div class="header-social none-mb">
                 <a href=""
                   ><div class="social-icon">
                     <i class="fa-brands icon-social fa-facebook-f"></i></div
@@ -74,10 +102,10 @@
                 ></a>
               </div>
               <a href="">
-                <div class="logo">
+                <div class="logo none-mb">
                   <div class="logo-img">
                     <img
-                      src="https://gamek.mediacdn.vn/web_images/gamek_logo_30052022.svg"
+                      src="img/logo.jpg"
                     />
                   </div>
                 </div>
@@ -85,7 +113,7 @@
             </div>
           </div>
         </div>
-        <div class="navigation nonstick-nav">
+        <div class="navigation nonstick-nav none-mb">
           <a href="">
             <div class="navigation-home">
               <i class="fa-solid fa-house-chimney"></i>
@@ -121,7 +149,7 @@
       </header>
 
       <main>
-        <div class="head-advert-container">
+        <div class="none-mb head-advert-container">
           <a href="">
             <div class="head-advert">
               <img
@@ -146,7 +174,7 @@
                   </div>
                 </a>
               </div>
-              <div class="featured-card featured-medium">
+              <div class="none-mb featured-card featured-medium">
                 <a href="">
                   <div class="featured-title second-text">
                     Bom tấn flop nhất năm lỗ hơn 12.000 tỷ, thê thảm đến mức
@@ -159,7 +187,7 @@
                   </div>
                 </a>
               </div>
-              <div class="featured-card featured-small">
+              <div class="none-mb featured-card featured-small">
                 <a href="">
                   <div class="featured-title third-text">
                     Chuyển nhượng của một đội LPL ngỡ như “phim drama”, đầy đủ
@@ -172,7 +200,7 @@
                   </div>
                 </a>
               </div>
-              <div class="featured-card featured-exsmall">
+              <div class="none-mb featured-card featured-exsmall">
                 <a href="">
                   <div class="featured-title third-text">
                     Tò mò ghé thăm trang cá nhân nữ coser xinh đẹp của tựa game
@@ -267,7 +295,7 @@
                   </a>
                 </div>
               </div>
-              <div class="side-section">
+              <div class="none-mb side-section">
                 <div class="recommend-section">
                   <div class="recommend-heading">DÀNH CHO BẠN</div>
                   <div class="recommend-container">
@@ -419,7 +447,7 @@
                 </a>
               </div>
               <div class="recent-section">
-                <div class="recent-heading">
+                <div class="none-mb recent-heading">
                   <div class="recent-heading-text">MỚI CẬP NHẬT</div>
                 </div>
                 <div class="recent-container">
@@ -738,7 +766,7 @@
             <div class="footer-maincontent">
               <div class="footer-wall"></div>
               <div class="maincontent-text">
-                <p class="footer-title">GameK:</p>
+                <p class="footer-title">GNEWS:</p>
                 <p>
                   Tầng 21, Tòa nhà Center Building - Hapulico Complex, Số 1
                   Nguyễn Huy Tưởng, Thanh Xuân, Hà Nội.
