--- a/public/detail.html
+++ b/public/detail.html
@@ -77,7 +77,7 @@
                 <div class="logo">
                   <div class="logo-img">
                     <img
-                      src="https://gamek.mediacdn.vn/web_images/gamek_logo_30052022.svg"
+                      src="img/logo.jpg"
                     />
                   </div>
                 </div>
@@ -492,6 +492,222 @@
                   </div>
                   </a>
                 </div>
+                <div class="section-wall"></div>
+                <div class="recent-section">
+                  <div class="recent-container">
+                    <div class="recent-card">
+                    <div class="recent-img">
+                      <a class="recent-img-link" href="">
+                        <img class="recent-img"
+                          src="https://gamek.mediacdn.vn/zoom/310_200/133514250583805952/2023/12/21/vvv-1703152321167607292221-0-0-459-734-crop-17031523259371493211599.png"
+                        />
+                      </a>
+                    </div>
+
+                    <div class="recent-card-text">
+                      <div class="recent-title">
+                        <a href="">
+                          Bom tấn của Capcom tiếp tục "bay màu" sau nhiều lần gắng gượng, có lẽ đã đến lúc kết thúc 
+                          một huyền thoại
+                        </a>
+                      </div>
+                      <div class="recent-subtitle">
+                        Sau nhiều nỗ lực “vớt vát”, cuối cùng Capcom cũng đưa ra quyết định này.
+                      </div>
+                      <div class="recent-info">
+                        <a href="" class="recent-author">Thế Anh</a> -
+                        <span>Mobile & Social</span> <span>21/12/2023</span>
+                        <span>20:03</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="recent-card">
+                    <div class="recent-img">
+                      <a class="recent-img-link" href="">
+                        <img class="recent-img"
+                          src="https://gamek.mediacdn.vn/zoom/310_200/133514250583805952/2023/12/21/vvv-1703152321167607292221-0-0-459-734-crop-17031523259371493211599.png"
+                        />
+                      </a>
+                    </div>
+
+                    <div class="recent-card-text">
+                      <div class="recent-title">
+                        <a href="">
+                          Bom tấn của Capcom tiếp tục "bay màu" sau nhiều lần gắng gượng, có lẽ đã đến lúc kết thúc 
+                          một huyền thoại
+                        </a>
+                      </div>
+                      <div class="recent-subtitle">
+                        Sau nhiều nỗ lực “vớt vát”, cuối cùng Capcom cũng đưa ra quyết định này.
+                      </div>
+                      <div class="recent-info">
+                        <a href="" class="recent-author">Thế Anh</a> -
+                        <span>Mobile & Social</span> <span>21/12/2023</span>
+                        <span>20:03</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="recent-card">
+                    <div class="recent-img">
+                      <a class="recent-img-link" href="">
+                        <img class="recent-img"
+                          src="https://gamek.mediacdn.vn/zoom/310_200/133514250583805952/2023/12/21/vvv-1703152321167607292221-0-0-459-734-crop-17031523259371493211599.png"
+                        />
+                      </a>
+                    </div>
+
+                    <div class="recent-card-text">
+                      <div class="recent-title">
+                        <a href="">
+                          Bom tấn của Capcom tiếp tục "bay màu" sau nhiều lần gắng gượng, có lẽ đã đến lúc kết thúc 
+                          một huyền thoại
+                        </a>
+                      </div>
+                      <div class="recent-subtitle">
+                        Sau nhiều nỗ lực “vớt vát”, cuối cùng Capcom cũng đưa ra quyết định này.
+                      </div>
+                      <div class="recent-info">
+                        <a href="" class="recent-author">Thế Anh</a> -
+                        <span>Mobile & Social</span> <span>21/12/2023</span>
+                        <span>20:03</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="recent-card">
+                    <div class="recent-img">
+                      <a class="recent-img-link" href="">
+                        <img class="recent-img"
+                          src="https://gamek.mediacdn.vn/zoom/310_200/133514250583805952/2023/12/21/vvv-1703152321167607292221-0-0-459-734-crop-17031523259371493211599.png"
+                        />
+                      </a>
+                    </div>
+
+                    <div class="recent-card-text">
+                      <div class="recent-title">
+                        <a href="">
+                          Bom tấn của Capcom tiếp tục "bay màu" sau nhiều lần gắng gượng, có lẽ đã đến lúc kết thúc 
+                          một huyền thoại
+                        </a>
+                      </div>
+                      <div class="recent-subtitle">
+                        Sau nhiều nỗ lực “vớt vát”, cuối cùng Capcom cũng đưa ra quyết định này.
+                      </div>
+                      <div class="recent-info">
+                        <a href="" class="recent-author">Thế Anh</a> -
+                        <span>Mobile & Social</span> <span>21/12/2023</span>
+                        <span>20:03</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="recent-card">
+                    <div class="recent-img">
+                      <a class="recent-img-link" href="">
+                        <img class="recent-img"
+                          src="https://gamek.mediacdn.vn/zoom/310_200/133514250583805952/2023/12/21/vvv-1703152321167607292221-0-0-459-734-crop-17031523259371493211599.png"
+                        />
+                      </a>
+                    </div>
+
+                    <div class="recent-card-text">
+                      <div class="recent-title">
+                        <a href="">
+                          Bom tấn của Capcom tiếp tục "bay màu" sau nhiều lần gắng gượng, có lẽ đã đến lúc kết thúc 
+                          một huyền thoại
+                        </a>
+                      </div>
+                      <div class="recent-subtitle">
+                        Sau nhiều nỗ lực “vớt vát”, cuối cùng Capcom cũng đưa ra quyết định này.
+                      </div>
+                      <div class="recent-info">
+                        <a href="" class="recent-author">Thế Anh</a> -
+                        <span>Mobile & Social</span> <span>21/12/2023</span>
+                        <span>20:03</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="recent-card">
+                    <div class="recent-img">
+                      <a class="recent-img-link" href="">
+                        <img class="recent-img"
+                          src="https://gamek.mediacdn.vn/zoom/310_200/133514250583805952/2023/12/21/vvv-1703152321167607292221-0-0-459-734-crop-17031523259371493211599.png"
+                        />
+                      </a>
+                    </div>
+
+                    <div class="recent-card-text">
+                      <div class="recent-title">
+                        <a href="">
+                          Bom tấn của Capcom tiếp tục "bay màu" sau nhiều lần gắng gượng, có lẽ đã đến lúc kết thúc 
+                          một huyền thoại
+                        </a>
+                      </div>
+                      <div class="recent-subtitle">
+                        Sau nhiều nỗ lực “vớt vát”, cuối cùng Capcom cũng đưa ra quyết định này.
+                      </div>
+                      <div class="recent-info">
+                        <a href="" class="recent-author">Thế Anh</a> -
+                        <span>Mobile & Social</span> <span>21/12/2023</span>
+                        <span>20:03</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="recent-card">
+                    <div class="recent-img">
+                      <a class="recent-img-link" href="">
+                        <img class="recent-img"
+                          src="https://gamek.mediacdn.vn/zoom/310_200/133514250583805952/2023/12/21/vvv-1703152321167607292221-0-0-459-734-crop-17031523259371493211599.png"
+                        />
+                      </a>
+                    </div>
+
+                    <div class="recent-card-text">
+                      <div class="recent-title">
+                        <a href="">
+                          Bom tấn của Capcom tiếp tục "bay màu" sau nhiều lần gắng gượng, có lẽ đã đến lúc kết thúc 
+                          một huyền thoại
+                        </a>
+                      </div>
+                      <div class="recent-subtitle">
+                        Sau nhiều nỗ lực “vớt vát”, cuối cùng Capcom cũng đưa ra quyết định này.
+                      </div>
+                      <div class="recent-info">
+                        <a href="" class="recent-author">Thế Anh</a> -
+                        <span>Mobile & Social</span> <span>21/12/2023</span>
+                        <span>20:03</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="recent-card">
+                    <div class="recent-img">
+                      <a class="recent-img-link" href="">
+                        <img class="recent-img"
+                          src="https://gamek.mediacdn.vn/zoom/310_200/133514250583805952/2023/12/21/vvv-1703152321167607292221-0-0-459-734-crop-17031523259371493211599.png"
+                        />
+                      </a>
+                    </div>
+
+                    <div class="recent-card-text">
+                      <div class="recent-title">
+                        <a href="">
+                          Bom tấn của Capcom tiếp tục "bay màu" sau nhiều lần gắng gượng, có lẽ đã đến lúc kết thúc 
+                          một huyền thoại
+                        </a>
+                      </div>
+                      <div class="recent-subtitle">
+                        Sau nhiều nỗ lực “vớt vát”, cuối cùng Capcom cũng đưa ra quyết định này.
+                      </div>
+                      <div class="recent-info">
+                        <a href="" class="recent-author">Thế Anh</a> -
+                        <span>Mobile & Social</span> <span>21/12/2023</span>
+                        <span>20:03</span>
+                      </div>
+                    </div>
+                  </div>
+                  </div>
+                  <button class="recent-viewmore">
+                   XEM THÊM
+                </button>
+                </div>
               </div>
             </div>
           </div>
@@ -588,7 +804,7 @@
             <div class="footer-maincontent">
               <div class="footer-wall"></div>
               <div class="maincontent-text">
-                <p class="footer-title">GameK:</p>
+                <p class="footer-title">GNEWS:</p>
                 <p>
                   Tầng 21, Tòa nhà Center Building - Hapulico Complex, Số 1
                   Nguyễn Huy Tưởng, Thanh Xuân, Hà Nội.
